# TargetLibraries_sctsim

./: 3condaBrycesInstall.sh  README.md  RegisterNames.txt  Registers.txt  brycesGitCheckout.sh  bryces_SCT_Module_SIM_Script.py  bryces_SCT_SIM_Script.py  code_line_counts.csv  color_test.py  createAsicModuleDefs.py  file_r0.tio  findBinaryPatterns.py  generateASICStructs.py  getASICModuleDefs.py  getC++FileLengths.py  hexDataDisplay.py  output.txt  output2.txt  packet5640_color.txt  packet5640_nocolor.txt  register_data.csv  simple_connect.py  takedata2018.py  wiresharkToBinary.py
targetcalib/: CMakeLists.txt  Doxyfile  README.md  brycesTargetBuilder.sh  cmake_install.cmake  numpy.i
targetcalib/dev/: mapping_checm_V1-0-0.cfg
targetcalib/include/TargetCalib/: CalibReadWriter.h  Calibrator.h  Constants.h  MappingSP.h  PedestalMaker.h  TfMaker.h
targetcalib/include/TargetCalib/exe_classes/: PedestalGenerator.h  TfGenerator.h
targetcalib/scripts/: plot_tf.py
targetcalib/scripts/mapping/: plot_data_basic.cc  plot_neighbours.py
targetcalib/src/: Calibrator.cc  CalibratorMultiFile.cc  CfMaker.cc  Logger.cc  MappingSP.cc  PedestalMaker.cc
targetcalib/src_exe/: apply_calibration.cc  fix_bad_tfs.cc  generate_ac_tf_jason.cc
targetdriver-pSCT/: CMakeCache.txt  CMakeLists.txt  Doxyfile  Doxyfile.in  Makefile  README.md  RELEASE_NOTES  TargetDriverConfig.cmake  TargetDriverConfigVersion.cmake  cmake_install.cmake  install_manifest.txt  oldLessComplicatedCmakeListsFile.txt  target_driver.i
targetdriver-pSCT/config/: SCT_MSA_FPGA_Firmware0xC000000E.def  T7_M_FPGA_Firmware0xB0000102.def  T7_M_FPGA_Firmware0xB000010C.def  T7_M_FPGA_Firmware0xB000010D.def  TC_ASIC.def  TC_EB_FPGA_Firmware0xFEDA0016.def  TC_EB_FPGA_Firmware0xFEDA001D.def  TC_EB_FPGA_Firmware0xFEDA001E.def  TC_MSA_FPGA_Firmware0xC0000002.def  TC_MSA_FPGA_Firmware0xC0000005.def  TC_M_FPGA_Firmware0xC0000003.def  TC_M_FPGA_Firmware0xC000000E.def  TM5_FPGA_Firmware0xFEDA003D_CHEC-M_LeicesterPC.def
targetdriver-pSCT/config/older_firmware/: TECT5TEA_FPGA_Firmware0xFEDA0006.def  TECT5TEA_FPGA_Firmware0xFEDA0008.def  TECT5TEA_FPGA_Firmware0xFEDA0012.def  TEC_FPGA_Firmware0xFEDA0002.def  TM5_ASIC.def  TM5_ASIC_UserXXX.config  TM7_FPGA_Firmware0xB0000100.def  TM7_FPGA_Firmware0xB0000102.def  TM7_FPGA_Firmware0xFEDA0005.def
targetdriver-pSCT/include/TargetDriver/: DataListener.h  DataPacket.h  DataPacket_v2.h  EventBuffer.h  EventBuffer_v2.h  GenericPacket.h  RawEvent.h  RegisterSettings.h  RingBuffer.h  TargetModuleComms.h  TargetSimulator.h  TesterBoard.h  TriggerInfo.h  UDPClient.h  Waveform.h  utils.h
targetdriver-pSCT/share/TargetDriver/config/: SCT_MSA_FPGA_Firmware0xC0000001.def  SCT_MSA_FPGA_Firmware0xC0000002.def  SCT_MSA_FPGA_Firmware0xC0000004.def  SCT_MSA_FPGA_Firmware0xC0000005.def  T5TEA_ASIC.def  T5_ASIC.def  T5_M_FPGA_Firmware0xFEDA003D.def  TC_EB_FPGA_Firmware0xFEDA001C.def  TC_MSA_FPGA_Firmware0xA0000001.def  TC_MSA_FPGA_Firmware0xC0000003.def  TC_MSA_FPGA_Firmware0xC0000004.def  TC_MSA_FPGA_Firmware0xC000000C.def  TC_MSA_FPGA_Firmware0xC000000D.def  TC_MSA_FPGA_Firmware0xC000000E.def  TC_M_FPGA_Firmware0xC0000002.def  TC_M_FPGA_Firmware0xC0000006.def  TC_M_FPGA_Firmware0xC000000C.def
targetdriver-pSCT/src/: DataPacket.cc  DataPacket_v2.cc  EventBuffer_v2.cc  RawEvent.cc  RegisterSettings.cc  TargetModule.cc  TargetModuleComms.cc  TargetSimulator.cc  TesterBoard.cc  TriggerPacket.cc  UDPBase.cc  UDPClient.cc  UDPServer.cc  Waveform.cc  utils.cc
targetdriver-pSCT/src_exe/: testbuffer.cc  tester.cc  testerT7.cc  update_firmware.cc
targetdriver-pSCT/test/: testEventBuffer.cc
targetio/: CMakeLists.txt  README.txt  RELEASE_NOTES  target_io.i
targetio/include/TargetIO/: EventFile.h  WaveformArrayReader.h
targetio/script/CHECS-TM/: DC_noise_analysis.py  mpik_dynamicrange_scan.py  mpik_gainmatching.py  plotEvents.py  plotEvents_scan.py~  plot_events2018_pdf.py  scan_trigdelay.py  takedata.py  takedata_singleTM-and-SiPM.py  takedata_sipm.py  thresh_pmtref4_scan.py  thresh_pmtref4_scan_2018.py
targetio/script/CTC_EvalBoard/: amon_test.py  calc_ampl_gauss.py  calc_ped_noise.py  calc_zero.py  calibrate_all.py  data.txt  masterscript.py  plot_adcrange.py  plot_calib.py  plot_events.py  plot_events_r0.py  plot_events_r0_calc.py  plot_events_r1.py  plot_mean.py  plot_occupancy.py  plot_r0.py  plot_vbias.py  run_loop.py  simple_connect.py  simple_trigger.py  take_single_data.py  takedata.py  takedata_int.py  takedata_ped_int.py  temperatures.txt  temperatures_pedtest.txt  test_pedestal.py
targetio/script/CTC_EvalBoard/VPED_and_DC_FT/: generate_lookup.py  plot_vped_tf.py  take_dc_tf.py  take_vped_tf.py
targetio/script/SCT_TM/: simple_connect.py
targetio/script/SCT_TM/INFN_test_system/: .svnignore  INFN_FEE_QC.py  INFN_FEE_SMART_QC.py  Peltier_utils.py  README.md  SMART_utils.py  TC_analysis_utils.py  TC_utils.py  agilent33250A_inverted.py  agilent33250A_off.py  agilent33250A_utils.py  analyse_pedestal.py  arduino_utils.py  cell_id_map.py  defaults.yaml  defaults_smart.yaml  deps.txt  environment.yaml  limits.yaml  program_controller.sh  rename_file.py  run_pedestal.py  run_peltier.py  run_power.py  run_signal.py  run_signal_sipm.py  run_smart.py  run_triggerscan.py  simple_datataking.py  status.html  status_smart.html  template_html.tpl  utils.py
targetio/script/SCT_TM/UW_test_system/: BrickPowerSupply.py  T5TEA_evaluation.ipynb  TARGETC_testing.py  Wbias_Scan_analysis.ipynb  connect_to_module.py  piCom.py  plot_events.py  powerCycle.py
targetio/script/T7_Module/: HVtestRemote.py  SiPMReconstruction.ipynb  nEvents.py  plot_events.py  record.py  runInit.py
targetio/script/T7_Module/bp_testsuite/: SerialConsole.py  brendan_DataTaking.py  colin_DataTaking.py  configLEDPulseWFs.py  fanPower.py  justDataTakingBP.py  miles_justDataTakingBP.py  nohup.out  runInit.py  (+5 more)
targetio/script/TC_EvalBoard/: takedata2018.py
targetio/src/: EventFileReader.cc  EventFileWriter.cc  EventFileWriter_v2.cc  FitsCardImage.cc  WaveformArrayReader.cc
targetio/test/: testEventHeader.cc  testFITS.cc  testT5CameraModule.cc
(+382 files in other folders)
